Some adjustments to the robot

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Matter testjes</title>
+    <title>Robot Simulation</title>
   </head>
   <body>
     <script src="js/matter.js"></script>
