bug fixing, changing to efficientere code

--- a/public/index.html
+++ b/public/index.html
@@ -26,26 +26,36 @@
       </button>
     </div>
     <div class="kruis">
-      <button class="kruis_voor" id="forward" value="Forward">Forward</button>
-      <button class="kruis_achter" id="backward" value="Backward">
+      <button class="kruis_voor noselect" id="forward" value="Forward">
+        Forward
+      </button>
+      <button class="kruis_achter noselect" id="backward" value="Backward">
         Backward
       </button>
-      <button class="kruis_links" id="left" value="Go Left">Go Left</button>
-      <button class="kruis_rust" id="rust" value="rust">Rest</button>
-      <button class="kruis_rechts" id="right" value="Go Right">
+      <button class="kruis_links noselect" id="left" value="Go Left">
+        Go Left
+      </button>
+      <button class="kruis_rust noselect" id="rust" value="rust">Rest</button>
+      <button class="kruis_rechts noselect" id="right" value="Go Right">
         Go Right
       </button>
     </div>
     <div class="controlsOver">
       <div class="controls">
-        <button id="bow" value="Bow">Bow</button>
-        <button id="dance" value="Dance">Make a dance!</button>
-        <button id="wave" value="Wave">Wave</button>
+        <button class="noselect" id="bow" value="Bow">Bow</button>
+        <button class="noselect" id="dance" value="Dance">Make a dance!</button>
+        <button class="noselect" id="wave" value="Wave">Wave</button>
       </div>
       <div class="controls">
-        <button id="lean_left" value="Lean left">Lean left</button>
-        <button id="lean_right" value="Lean right">Lean right</button>
-        <button id="center" value="center">Center Robot</button>
+        <button class="noselect" id="lean_left" value="Lean left">
+          Lean left
+        </button>
+        <button class="noselect" id="lean_right" value="Lean right">
+          Lean right
+        </button>
+        <button class="noselect" id="center" value="center">
+          Center Robot
+        </button>
       </div>
     </div>
     <div class="typewriter box1 sb5">
