Hammer.js for touch events toegevoegd

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
     <div class="typewriter box1 sb5">
       <h2 id="tekst01">Nice to meet ya!</h2>
     </div>
+    <script src="https://hammerjs.github.io/dist/hammer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="js/index.js"></script>
   </body>
