--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="typewriter box1 sb5">
-      <h1 id="tekst">Nice to meet ya!</h1>
+    <div class="typewriter box1 sb5 noselect">
+      <h1 id="tekst" class="noselect">Nice to meet ya!</h1>
     </div>
     <div class="camera">
       <button id="camera_left" runat="server" value="right">
         <i class="right"></i>
       </button>
       <img
-        src="http://192.168.0.225:8080/stream/video.mjpeg"
+        src="http://192.168.2.3:8080/stream/video.mjpeg"
         alt="hier komt de video feed"
         height="300"
         width="300"
@@ -47,19 +47,19 @@
         <button class="noselect" id="wave" value="Wave">Wave</button>
       </div>
       <div class="controls">
-        <button class="noselect" id="lean_left" value="Lean left">
-          Lean left
+        <button class="noselect" id="center" value="center">
+          Football
         </button>
         <button class="noselect" id="lean_right" value="Lean right">
           Lean right
         </button>
-        <button class="noselect" id="center" value="center">
-          Center Robot
+        <button class="noselect" id="lean_left" value="Lean left">
+          Lean left
         </button>
       </div>
     </div>
-    <div class="typewriter box1 sb5">
-      <h2 id="tekst01">Nice to meet ya!</h2>
+    <div class="typewriter box1 sb5 noselect">
+      <h2 id="tekst01" class="noselect">Nice to meet ya!</h2>
     </div>
     <script src="https://hammerjs.github.io/dist/hammer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
